Partial implementation of like button functionality. Button added to index template, and it passes the user_id of the user who clicks the button forward to the controller. Next steps are to pass user_id to the model and have it add the user-post relationship to the database.

--- a/acebook/templates/posts/index.html
+++ b/acebook/templates/posts/index.html
@@ -18,6 +18,10 @@
         {% if g.user.id == post.author_id %}
           <a class="action" href="{{ url_for('posts.update', id=post.id) }}">Edit</a>
         {% endif %}
+        <form action="/likes" method="post">
+          <input type="hidden" name="user_id" value="{{ g.user.id }}">
+          <input type="submit" value="Like">
+        </form>
       </header>
       <p class="body">{{ post.body }}</p>
     </article>
