--- a/acebook/static/style.css
+++ b/acebook/static/style.css
@@ -2,6 +2,7 @@ html {
    font-family: sans-serif;
    background: #eee;
    padding: 1rem;
+   font-family: sans-serif;
 }
 
 body {
@@ -11,7 +12,7 @@ body {
 }
 
 h1 {
-   font-family: serif;
+   /* font-family: serif; */
    color: #377ba8;
    margin: 1rem 0;
 }
