--- a/acebook/templates/posts/index.html
+++ b/acebook/templates/posts/index.html
@@ -33,6 +33,7 @@
         {% endif %}
         </div>
       </header>
+      <img src="{{ post_image }}">
       <p class="body">{{ post.body }}</p>
     </article>
     {% if not loop.last %}
