--- a/acebook/templates/posts/index.html
+++ b/acebook/templates/posts/index.html
@@ -35,8 +35,22 @@
       </header>
       <p class="body">{{ post.body }}</p>
     </article>
+    <hr>
+    {% if post.id == post_id %}
+        <div class="comments">Comments:</div>
+        <ls>{% for comments in comment %}
+         <p>{{ comments[1]}}, <p>commented on by </p>{{comments[0] }}<p>on</p> {{ comments[2].strftime('%Y-%m-%d') }}</p>
+        {% endfor %}</ls>
+        {% endif %}
     {% if not loop.last %}
+    <form action="/comments" method="post">
+      <input type="text" name="comment" method="post">
+      <input type="hidden" name="user_id" value="{{ g.user.id }}">
+      <input type="hidden" name="post_id" value="{{ post.id }}">
+      <input type="submit" value="comment">
+    </form>
       <hr>
+      
     {% endif %}
   {% endfor %}
 {% endblock %}
