like button and posts styled

--- a/acebook/static/style.css
+++ b/acebook/static/style.css
@@ -134,6 +134,8 @@ input[type=submit] {
    min-width: 10em;
 }
 
+
+
 .comment{
    /* line-height: 3px; */
    height: auto;
@@ -146,4 +148,23 @@ input[type=submit] {
 .comment h3{
    color: forestgreen;
    
+}
+
+header{
+   display: flex;
+   justify-content: space-between;
+   margin-left: 20px;
+}
+
+.likes_section input{
+   background-color: forestgreen;
+   border-radius: 20px;
+   padding: 5px 10px ;
+   border: 2px solid forestgreen;
+   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+   font-size: 16px;
+}
+
+.likes_section input:hover{
+   background-color: goldenrod;
 }
