--- a/acebook/templates/posts/index.html
+++ b/acebook/templates/posts/index.html
@@ -10,30 +10,37 @@
 {% block content %}
   {% for post in posts %}
     <article class="post">
-      <header>
-        <div>
-          <h1>{{ post.title }}</h1>
-          <div class="about">by {{ post.username }} on {{ post.created.strftime('%Y-%m-%d') }}</div>
+    <div class="message">
+      
+        <header>
+          <div>
+            <h1>{{ post.title }}</h1>
+            <div class="about">by {{ post.username }} on {{ post.created.strftime('%Y-%m-%d') }}</div>
+            <p class="body">{{ post.body }}</p>
+          </div>
+          {% if g.user.id == post.author_id %}
+            <a class="action" href="{{ url_for('posts.update', id=post.id) }}">Edit</a>
+          {% endif %}
+        <div class="likes_section">
+          <form action="/likes" method="post">
+            <input type="hidden" name="user_id" value="{{ g.user.id }}">
+            <input type="hidden" name="post_id" value="{{ post.id }}">
+            <input type="submit" value="Like">
+          </form>
+      
+      
+           {% if post.id == post_id %}
+             <div class="liked">You have liked this post!</div>
+             <p> Liked by: </p>
+             {% for liked_usernames in liked_usernames %}
+               <p>{{ liked_usernames[0] }}</p>
+             {% endfor %}
+           {% endif %}
         </div>
-        {% if g.user.id == post.author_id %}
-          <a class="action" href="{{ url_for('posts.update', id=post.id) }}">Edit</a>
-        {% endif %}
-        <form action="/likes" method="post">
-          <input type="hidden" name="user_id" value="{{ g.user.id }}">
-          <input type="hidden" name="post_id" value="{{ post.id }}">
-          <input type="submit" value="Like">
-        </form>
-        <div>
-        {% if post.id == post_id %}
-          <div class="liked">You have liked this post!</div>
-          <p> Liked by: </p>
-          <ls>{% for liked_usernames in liked_usernames %}
-            <p>{{ liked_usernames[0] }}</p>
-          {% endfor %}</ls>
-        {% endif %}
-        </div>
+      
+    </div>
       </header>
-      <p class="body">{{ post.body }}</p>
+      
       <hr>
     {% if post.id == post_id %}
         <div class="comments"></div>
