--- a/acebook/templates/posts/index.html
+++ b/acebook/templates/posts/index.html
@@ -11,7 +11,6 @@
   {% for post in posts %}
     <article class="post">
     <div class="message">
-      
         <header>
           <div>
             <h1>{{ post.title }}</h1>
@@ -22,46 +21,35 @@
             <a class="action" href="{{ url_for('posts.update', id=post.id) }}">Edit</a>
           {% endif %}
         <div class="likes_section">
-          <form action="/likes" method="post">
+          <form action="/" method="post">
             <input type="hidden" name="user_id" value="{{ g.user.id }}">
             <input type="hidden" name="post_id" value="{{ post.id }}">
             <input type="submit" value="Like">
           </form>
-      
-      
-           {% if post.id == post_id %}
-             <div class="liked">You have liked this post!</div>
-             <p> Liked by: </p>
-             {% for liked_usernames in liked_usernames %}
-               <p>{{ liked_usernames[0] }}</p>
-             {% endfor %}
-           {% endif %}
-        </div>
-      
-    </div>
-      </header>
-      
-      <hr>
-    {% if post.id == post_id %}
-        <div class="comments"></div>
-        {% for comments in comment %}
-         <div class="comment">
-           <h3>"{{ comments[1]}}"</h3> <p>commented on by <a href="#">{{comments[0] }}</a> at {{ comments[2].strftime('%H-%M ') }} on {{ comments[2].strftime('%Y-%m-%d ') }}</p><hr>
-         </div>
+        <p> Liked by: </p>
+        {% for like in likes %}
+          {% if post.id == like.post_id %}
+               <p>{{ like.user_id }}</p>
+          {% endif %}
         {% endfor %}
-        {% endif %}
-        <form action="/comments" method="post">
-          <input type="text" name="comment" method="post">
-          <input type="hidden" name="user_id" value="{{ g.user.id }}">
-          <input type="hidden" name="post_id" value="{{ post.id }}">
-          <input type="submit" value="comment">
-        </form>
-    <!-- {% if not loop.last %} -->
-    
+        </div>
+      </header>
+    </div>
+    <hr>
+    {% for comment in comments %}
+      {% if post.id == comment.post_id %}
+         <div class="comment">
+           <h3>"{{ comment.comment_body}}"</h3> <p>commented on by <a href="#">{{comment.user_id }}</a> </p><hr>
+         </div>
+      {% endif %}
+    {% endfor %}
+      <form action="/" method="post">
+        <input type="text" name="comment" method="post">
+        <input type="hidden" name="user_id" value="{{ g.user.id }}">
+        <input type="hidden" name="post_id" value="{{ post.id }}">
+        <input type="submit" value="comment">
+      </form>
     </article>
-    
-      <hr>
-      
-    {% endif %}
+    <hr>
   {% endfor %}
 {% endblock %}
