--- a/acebook/templates/posts/index.html
+++ b/acebook/templates/posts/index.html
@@ -14,8 +14,9 @@
         <header>
           <div>
             <h1>{{ post.title }}</h1>
-            <div class="about">by {{ post.username }} on {{ post.created.strftime('%Y-%m-%d') }}</div>
-            <p class="body">{{ post.body }}</p>
+            <div class="about">by {{ post.username }} on {{ post.created.strftime('%Y-%m-%d') }}
+              
+            </div>
           </div>
           {% if g.user.id == post.author_id %}
             <a class="action" href="{{ url_for('posts.update', id=post.id) }}">Edit</a>
