--- a/acebook/templates/posts/update.html
+++ b/acebook/templates/posts/update.html
@@ -11,6 +11,7 @@
       value="{{ request.form['title'] or post.title }}" required>
     <label for="body">Body</label>
     <textarea name="body" id="body">{{ request.form['body'] or post.body }}</textarea>
+    <img src="{{ url_for('static', filename='uploaded_pics/" id="post-image">
     <input type="submit" value="Save">
   </form>
   <hr>
