very important colour change to heart icon

--- a/acebook/templates/posts/index.html
+++ b/acebook/templates/posts/index.html
@@ -33,7 +33,7 @@
                 <p>{{ like.user_id }}</p>
             {% endif %}
           {% endfor %}
-        <p> &hearts;  {{ exists|length }} </p>
+        <p style="color:rgb(189, 65, 65);"> &hearts; {{ exists|length }} </p>
         </div>
       </header>
       {% if post.pic %}
