--- a/acebook/templates/posts/index.html
+++ b/acebook/templates/posts/index.html
@@ -27,6 +27,11 @@
             <input type="hidden" name="post_id" value="{{ post.id }}">
             <input type="submit" value="Like" >
           </form>
+          <form action="/dislike" method="post">
+            <input type="hidden" name="user_id" value="{{ g.user.id }}">
+            <input type="hidden" name="post_id" value="{{ post.id }}">
+            <input type="submit" value="Dislike" >
+          </form>
         <p> Liked by: </p>
         {% set exists = [] %}
           {% for like in likes %}
@@ -52,7 +57,7 @@
       {% endif %}
     {% endfor %}
       <form action="/" method="post">
-        <input type="text" name="comment" method="post">
+        <input type="text" name="comment" method="post" required>
         <input type="hidden" name="user_id" value="{{ g.user.id }}">
         <input type="hidden" name="post_id" value="{{ post.id }}">
         <input type="submit" value="comment">
