--- a/acebook/static/style.css
+++ b/acebook/static/style.css
@@ -1,46 +1,63 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;700&display=swap');
+
 html {
-   font-family: sans-serif;
-   background: #eee;
+   background: rgb(252, 252, 252);
    padding: 1rem;
-   font-family: sans-serif;
+   font-family: 'Josefin Sans', sans-serif !important;
 }
 
 body {
-   max-width: 960px;
+   /* max-width: 960px; */
+   padding: 20px;
    margin: 0 auto;
-   background: white;
+   font-family: 'Josefin Sans', sans-serif !important;
+
 }
 
+
 h1 {
-   /* font-family: serif; */
-   color: #377ba8;
-   margin: 1rem 0;
+   color: rgb(66, 176, 115);
+   padding: 5px;
+}
+
+nav h1{
+   letter-spacing: 2px;
+   font-weight: 900;
+   margin: 10px !important;
+   padding: 10px !important;
 }
 
 a {
-   color: #377ba8;
+   color: rgb(159, 96, 41) !important;
+   padding: 15px 20px !important;
+
 }
 
+a:hover{
+   background: #000 !important;
+   color: rgb(66, 176, 115) !important;
+   
+}
+.liked-user-id{
+   padding: 10px;
+   border-radius: 15px;
+   border-color: rgb(189, 65, 65);
+   border-style: solid;
+}
+
+.like-button-form{
+   margin: -5px 0;
+}
 hr {
    border: none;
    border-top: 1px solid lightgray;
 }
 
 nav {
-   background: lightgray;
+   background: rgb(219, 235, 226);
    display: flex;
    align-items: center;
    padding: 0 0.5rem;
-}
-
-nav h1 {
-   flex: auto;
-   margin: 0;
-}
-
-nav h1 a {
-   text-decoration: none;
-   padding: 0.25rem 0.5rem;
 }
 
 nav ul  {
@@ -93,12 +110,14 @@ nav ul li a, nav ul li span, header .action {
 }
 
 .post .about {
+   padding-left: 20px;
    color: slategray;
    font-style: italic;
 }
 
 .post .body {
    white-space: pre-line;
+   padding: 20px;
 }
 
 .content:last-child {
@@ -106,7 +125,6 @@ nav ul li a, nav ul li span, header .action {
 }
 
 .content form {
-   margin: 1em 0;
    display: flex;
    flex-direction: column;
 }
@@ -139,14 +157,13 @@ input[type=submit] {
 .comment{
    /* line-height: 3px; */
    height: auto;
-   font-size: 10px;
    background-color: white;
    margin-left: 20px;
    margin-right: 20px;
 }
 
 .comment h3{
-   color: forestgreen;
+   color: rgb(66, 176, 115);
    
 }
 
@@ -156,15 +173,21 @@ header{
    margin-left: 20px;
 }
 
-.likes_section input{
-   background-color: forestgreen;
+input[type=submit]{
+   background-color: rgb(66, 176, 115);
    border-radius: 20px;
-   padding: 5px 10px ;
-   border: 2px solid forestgreen;
+   padding: 10px 25px;
+   min-width: 5px;
+   margin: 0 10px;
+   border: none;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    font-size: 16px;
 }
 
-.likes_section input:hover{
-   background-color: goldenrod;
+input[type=submit]:hover{
+   background-color: rgb(189, 65, 65);
+}
+
+.likes-count{
+   background:rgb(189, 65, 65); color: white; padding: 10px; border-radius: 15px; margin-right: 7px;
 }
