--- a/acebook/templates/base.html
+++ b/acebook/templates/base.html
@@ -1,18 +1,25 @@
 <!doctype html>
 <title>{% block title %}{% endblock %} - Acebook</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-<nav>
-  <a href="/">
-    <h1>Acebook</h1>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<nav class="navbar navbar-light">
+  <a href="/" class="text-decoration-none fw-bold"">
+    <h1 class="text-uppercase">&#x1f43c; Pandiary</h1>
   </a>
   <ul>
     {% if g.user %}
-      <li><a href="profile">{{ g.user.username }}'s Profile</a></li>
-      <li><a href="#">Friends</a></li>
-      <li><a href="{{ url_for('auth.logout') }}">Log Out</a></li>
+      <li><a href="{{ url_for('profile.view') }}" class="text-decoration-none">{{ g.user.username }}'s Profile</a></li>
+      <li><a href="#" class="text-decoration-none">Friends</a></li>
+      <li><a href="{{ url_for('auth.logout') }}" class="text-decoration-none">Log Out</a></li>
+      {% if request.endpoint == 'profile.view' %}
+      <li><a href="{{ url_for('profile.edit') }}" class="text-decoration-none"> &#x270E; Edit my profile</a></li>
+      {% endif %}
+      {% if request.endpoint == 'profile.edit' %}
+      <li><a href="{{ url_for('profile.view') }}" class="text-decoration-none">View my profile</a></li>
+      {% endif %} 
     {% else %}
-      <li><a href="{{ url_for('auth.register') }}">Register</a></li>
-      <li><a href="{{ url_for('auth.login') }}">Log In</a></li>
+      <li><a href="{{ url_for('auth.register') }}" class="text-decoration-none">Register</a></li>
+      <li><a href="{{ url_for('auth.login') }}" class="text-decoration-none">Log In</a></li>
     {% endif %}
   </ul>
 </nav>
