--- a/acebook/templates/base.html
+++ b/acebook/templates/base.html
@@ -10,7 +10,7 @@
   <ul>
     {% if g.user %}
       <li><a href="{{ url_for('profile.view') }}" class="text-decoration-none">{{ g.user.username }}'s Profile</a></li>
-      <li><a href="{{ url_for('auth.friends') }}">Friends</a></li>
+      <li><a href="{{ url_for('auth.friends') }}" class="text-decoration-none">Friends</a></li>
       <li><a href="{{ url_for('auth.logout') }}" class="text-decoration-none">Log Out</a></li>
       {% if request.endpoint == 'profile.view' %}
       <li><a href="{{ url_for('profile.edit') }}" class="text-decoration-none"> &#x270E; Edit my profile</a></li>
