--- a/acebook/templates/posts/create.html
+++ b/acebook/templates/posts/create.html
@@ -9,7 +9,7 @@
     <label for="title">Title</label>
     <input name="title" id="title" value="{{ request.form['title'] }}" required maxlength="20">
     <label for="body">Body</label>
-    <textarea name="body" id="body">{{ request.form['body'] }}</textarea>
+    <textarea name="body" id="body" required>{{ request.form['body'] }}</textarea>
     <label for="photo">Photo</label>
     <input type="file" name="file" accept="image/*">
     <input type="submit" value="Save">
