--- a/acebook/templates/posts/index.html
+++ b/acebook/templates/posts/index.html
@@ -22,15 +22,32 @@
         <div class="row">
           <div class="col-sm d-flex flex-row">
             <p>
-              {% set exists = [] %}
+               {% set exists = [] %}
               Liked by 
+              {% set ns = namespace(display='block') %}
+              {% set ns = namespace(display2='none') %}
+
               {% for like in likes %} {% if post.id == like.post_id %}
+              {% set ns.display = 'test' %}{% set log = g.user.id | int %}{% set like_id = like.user_id | int %}
+              {% if log == like_id %}
+              
+              {% set ns.display = 'none' %}
+              {% set ns.display2 = 'block' %}
+
+              {% else %}
+              {% set ns.display = 'block' %}
+              {% set ns.display2 = 'none' %}
+                  
+              {% endif %}
               {% if exists.append(1) %}{% endif %}
               <span class="liked-user-id">{{ like.user_id }}</span>
               {% endif %} 
               {% endfor %}
+                          
+
               <span class="likes-count">&hearts; {{ exists|length }} </span>
               
+      
               
             </p>
           </div>
@@ -38,12 +55,13 @@
         
 
           <div class="col-sm d-flex flex-row justify-content-end">
-            <form action="/" method="post" class="like-button-form">
+            <form action="/" method="post" class="like-button-form" style="display: {{ ns.display }}">
               <input type="hidden" name="user_id" value="{{ g.user.id }}" />
               <input type="hidden" name="post_id" value="{{ post.id }}" />
               <input type="submit" value="Like" />
             </form>
-            <form action="/dislike" method="post" class="like-button-form">
+            
+            <form action="/dislike" method="post" class="like-button-form" style="display: {{ ns.display2 }}">
               <input type="hidden" name="user_id" value="{{ g.user.id }}" />
               <input type="hidden" name="post_id" value="{{ post.id }}" />
               <input type="submit" value="Dislike" />
